apps/monitoring/manifests/receiver/serviceWrite1.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    ignore-check.kube-linter.io/dangling-service: Check is incompatible with prometheus-operator
      CRDs
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 2.31.1
    prometheus: k8s
  name: prometheus-k8s-write-1
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  - name: reloader-web
    port: 8080
    targetPort: reloader-web
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    prometheus: k8s
    statefulset.kubernetes.io/pod-name: prometheus-k8s-1
